# axplat-riscv64-sg2002

./: Cargo.toml  README.md  axconfig.toml
src/: boot.rs  console.rs  irq.rs  power.rs
