[package]
name = "axplat-riscv64-sg2002"
version = "0.1.0"
edition = "2025"
keywords = ["arceos", "os", "hal", "embedded", "riscv"]
categories = ["embedded", "no-std", "hardware-support", "os"]

[features]
fp-simd = ["axcpu/fp-simd"]
irq = ["axplat/irq", "dep:riscv_plic"]
rtc = ["dep:riscv_goldfish"]
smp = ["axplat/smp"]

[dependencies]
axconfig-macros = "0.2"
axcpu = { version = "0.3", git = "https://github.com/arceos-org/axcpu.git", tag = "dev-v03" }
axplat = { version = "0.3", git = "https://github.com/arceos-org/axplat_crates.git", tag = "dev-v03" }
kspin = "0.1"
lazyinit = "0.2"
log = "0.4"
riscv = "0.14"
riscv_plic = { version = "0.2", git = "https://github.com/arceos-org/riscv_plic.git", tag = "dev-v02", optional = true }
riscv_goldfish = { version = "0.1", optional = true }
sbi-rt = { version = "0.0.3", features = ["legacy"] }
uart_16550 = "0.4.0"

[package.metadata.docs.rs]
targets = ["riscv64gc-unknown-none-elf"]
